# osqp.rs

./: .gitmodules  Cargo.toml  flake.nix
osqp-rust-sys/: Cargo.toml  generate_bindings.sh  lib.rs
osqp-rust-sys/src/examples/: osqp_demo.rs
osqp-rust-sys/src/lin_sys/: lib_handler.rs
osqp-rust-sys/src/lin_sys/direct/pardiso/: pardiso_loader.rs
osqp-rust-sys/src/lin_sys/direct/qdldl/amd/src/: SuiteSparse_config.rs  amd_aat.rs  amd_defaults.rs  amd_info.rs  amd_order.rs  amd_post_tree.rs  amd_postorder.rs  amd_preprocess.rs  amd_valid.rs
osqp-rust-sys/src/lin_sys/direct/qdldl/qdldl_sources/examples/: example.rs
osqp-rust-sys/src/lin_sys/direct/qdldl/qdldl_sources/src/: qdldl.rs
osqp-rust-sys/src/src/: auxil.rs  cs.rs  error.rs  kkt.rs  lin_alg.rs  lin_sys.rs  osqp.rs  polish.rs  proj.rs  util.rs
osqp-rust-sys/src32/examples/: osqp_demo.rs
osqp-rust-sys/src32/lin_sys/: lib_handler.rs
osqp-rust-sys/src32/lin_sys/direct/pardiso/: pardiso_interface.rs  pardiso_loader.rs
osqp-rust-sys/src32/lin_sys/direct/qdldl/: qdldl_interface.rs
osqp-rust-sys/src32/lin_sys/direct/qdldl/amd/src/: amd_1.rs  amd_2.rs  amd_aat.rs  amd_control.rs  amd_defaults.rs  amd_info.rs  amd_order.rs  amd_post_tree.rs  amd_postorder.rs  amd_preprocess.rs  amd_valid.rs
osqp-rust-sys/src32/lin_sys/direct/qdldl/qdldl_sources/examples/: example.rs
osqp-rust-sys/src32/lin_sys/direct/qdldl/qdldl_sources/src/: qdldl.rs
osqp-rust-sys/src32/src/: auxil.rs  cs.rs  error.rs  kkt.rs  lin_alg.rs  lin_sys.rs  osqp.rs  polish.rs  proj.rs  scaling.rs  util.rs
osqp-rust-sys/src64/examples/: osqp_demo.rs
osqp-rust-sys/src64/lin_sys/: lib_handler.rs
osqp-rust-sys/src64/lin_sys/direct/pardiso/: pardiso_interface.rs
osqp-rust-sys/src64/lin_sys/direct/qdldl/: qdldl_interface.rs
osqp-rust-sys/src64/lin_sys/direct/qdldl/amd/src/: amd_1.rs  amd_2.rs  amd_control.rs  amd_info.rs
osqp-rust-sys/src64/src/: cs.rs  lin_alg.rs  scaling.rs  util.rs
osqp-sys/: Cargo.toml  generate_bindings.sh  lib.rs
osqp-sys/src/examples/: osqp_demo.rs
src/: csc.rs  lib.rs  settings.rs  status.rs
(+16 files in other folders)
