[package]
name = "osqp-rust-sys"
authors = ["Michael Stone <michael.r.stone@gmail.com>"]
version = "0.6.2"
publish = false
edition = "2021"
autobins = false

[lib]
name = "osqp_rust_sys"
path = "lib.rs"
crate-type = ["staticlib", "rlib"]
[[bin]]
path = "src/examples/osqp_demo.rs"
name = "osqp_demo"
[[bin]]
path = "src/lin_sys/direct/qdldl/qdldl_sources/examples/example.rs"
name = "example"
[dependencies]
libc= "0.2"
