[package]
name = "osqp-rust-sys"
description = "c2rust(osqp-sys)"
license = "Apache-2.0"
authors = ["Michael Stone <michael.r.stone@gmail.com>"]
version = "0.6.2"
edition = "2021"
autobins = false

[lib]
name = "osqp_rust_sys"
path = "lib.rs"
crate-type = ["staticlib", "rlib"]
[[bin]]
path = "src64/examples/osqp_demo.rs"
name = "osqp_demo"
[[bin]]
path = "src64/lin_sys/direct/qdldl/qdldl_sources/examples/example.rs"
name = "example"
[dependencies]
